[metadata]
name = fast_hdbscan
version = 0.1.3
author = Leland McInnes
author_email = leland.mcinnes@gmail.com
maintainer = Leland McInnes
maintainer_email = leland.mcinnes@gmail.com
description = A fast multicore version of hdbscan for low dimensional euclidean spaces
long_description = file: README.rst
keywords = cluster, clustering, hdbscan, dbscan
url = https://github.com/TutteInstitute/fast_hdbscan
license = BSD 2-Clause License
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Operating System :: OS Independent

[options]
zip_safe = False
packages = fast_hdbscan
python_requires = >=3.9
install_requires =
    numpy>=1.21
    numba>=0.56
    scikit-learn>=1.1
